# SwigExample

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  SwigExample.cpp  SwigExample.h  SwigExample.i  test_swig_example.py
